refactor(redis): 优化聊天记录存储与序列化逻辑
- 调整 RedisConfig 中 ObjectMapper 的类型信息保留策略，增强对接口类型的支持
- 注册 Spring AI Message 相关类型到 ObjectMapper，确保正确序列化
- 在 RedisChatMemoryRepositoryDialect 中引入缓存 TTL 机制，提升数据时效性
- 使用 Jackson 替代 FastJSON 进行消息序列化与反序列化处理
- 重构消息保存逻辑，增加时间戳元数据并过滤无效消息
- 限制历史消息最大数量，防止内存溢出
- 增强异常处理机制，提高系统健壮性
- 添加详细的日志记录便于调试和监控