@@ -1,6 +1,5 @@
 package com.dd.ai_medical_triage.dao.repository;
 
-import com.alibaba.fastjson.JSON;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
@@ -12,6 +11,7 @@ import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 
+import java.time.Duration;
 import java.time.Instant;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -26,10 +26,17 @@ public class RedisChatMemoryRepositoryDialect {
     @Autowired
     private ObjectMapper objectMapper;
 
-    // Redis里存所有活跃会话ID的Set key，方便查找所有会话
+    // 活跃会话 ID 的 SET 所使用的 KEY
     private static final String CACHE_CONVERSATION_KEY = "chat:conversation_ids";
-    // 每个会话消息列表的key前缀
+    // 消息列表的 KEY 前缀
     private static final String CACHE_MESSAGE_LIST_PREFIX = "chat:messages:";
+
+    // 缓存TTL
+    private static final Duration CACHE_TTL_CONVERSATION = Duration.ofMinutes(30);
+    private static final Duration CACHE_TTL_MESSAGE = Duration.ofMinutes(30);
+
+    private static final int MAX_HISTORY_SIZE = 100;
+    private static final int MESSAGE_FETCH_LIMIT = 21;
 
     /**
      * 获取所有活跃会话ID
@@ -37,7 +44,13 @@ public class RedisChatMemoryRepositoryDialect {
      * 用于快速获取当前所有存在的会话ID
      */
     public List<String> findConversationIds() {
+        // 1. 获取所有活跃会话ID
         Set<Object> members = redisTemplate.opsForSet().members(CACHE_CONVERSATION_KEY);
+
+        // 2.刷新集合TTL
+        redisTemplate.expire(CACHE_CONVERSATION_KEY, CACHE_TTL_CONVERSATION);
+
+        // 3. 转换为字符串列表并返回
         return Optional.ofNullable(members)
                 .filter(m -> !m.isEmpty())
                 .map(m -> m.stream().map(Object::toString).collect(Collectors.toList()))
@@ -50,24 +63,28 @@ public class RedisChatMemoryRepositoryDialect {
      * 按消息顺序返回，方便构造对话上下文
      */
     public List<Message> findByConversationId(String conversationId) {
+        // 1. 拼接消息列表的key
         String key = CACHE_MESSAGE_LIST_PREFIX + conversationId;
         Long size = redisTemplate.opsForList().size(key);
         if(size == null || size == 0L){
             return Collections.emptyList();
         }
-        List<Object> range = redisTemplate.opsForList().range(key, size-21, -1);
-        List<Message> messages = new ArrayList<>();
-        for(Object o:range){
-            String json = JSON.toJSONString(o);
-            try {
-                // 从 JsonParser 中读取 JSON 数据，并将其反序列化为 JsonNode（树形结构）对象
-                JsonNode jsonNode = objectMapper.readTree(json);
-                messages.add(getMessage(jsonNode));
-            } catch (JsonProcessingException e) {
-                throw new RuntimeException("Error deserializing message", e);
-            }
+
+        // 2. 获取该会话的所有消息列表
+        long start = Math.max(0, size - MESSAGE_FETCH_LIMIT);
+        List<Object> messageObjects = redisTemplate.opsForList().range(key, start, -1);
+        if(CollectionUtils.isEmpty(messageObjects)){
+            return Collections.emptyList();
         }
-        return messages;
+
+        // 3. 刷新消息列表TTL
+        redisTemplate.expire(key, CACHE_TTL_MESSAGE);
+
+        // 4. 反序列化消息列表
+        return messageObjects.stream()
+                .map(this::convertToMessage)
+                .filter(Objects::nonNull) // 过滤转换失败的消息
+                .collect(Collectors.toList());
     }
 
     /**
@@ -76,26 +93,34 @@ public class RedisChatMemoryRepositoryDialect {
      * 并且保证会话ID存在于会话ID集合中
      */
     public void saveAll(String conversationId, List<Message> messages) {
+        // 1. 忽略空消息
         if(CollectionUtils.isEmpty(messages)) return;
-        String key=CACHE_MESSAGE_LIST_PREFIX+conversationId;
-        deleteByConversationId(conversationId);
+
+        // 2. 删除旧消息
+        String key = getMessageKey(conversationId);
+        redisTemplate.delete(key);
+
+        // 3. 刷新会话id集合
         redisTemplate.opsForSet().add(CACHE_CONVERSATION_KEY, conversationId);
-        List<Message> filteredMessages = messages.stream()
+        redisTemplate.expire(CACHE_CONVERSATION_KEY, CACHE_TTL_CONVERSATION);
+
+        // 4. 处理消息（过滤无效消息并添加时间戳）
+        List<Message> validMessages = messages.stream()
                 .filter(Objects::nonNull)
-                .filter(m -> m.getText() != null && m.getMessageType() != null).toList();
-        List<Message> finalMessages = new ArrayList<>();
-        for(Message message:filteredMessages){
-            String json = JSON.toJSONString(message);
-            try {
-                JsonNode jsonNode = objectMapper.readTree(json);
-                finalMessages.add(getMessageWithTime(jsonNode,message.getMessageType(),message.getText()));
-            } catch (JsonProcessingException e) {
-                throw new RuntimeException(e);
-            }
+                .filter(m -> m.getText() != null && m.getMessageType() != null)
+                .map(this::addTimestampToMessage) // 提取为独立方法
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+
+        if (CollectionUtils.isEmpty(validMessages)) {
+            log.debug("没有有效的消息可保存，会话ID: {}", conversationId);
+            return;
         }
-        redisTemplate.opsForList().rightPushAll(key, finalMessages.toArray());
-        int maxHistorySize = 100;
-        redisTemplate.opsForList().trim(key, -maxHistorySize, -1);
+
+        // 5. 保存消息并限制列表大小
+        redisTemplate.opsForList().rightPushAll(key, validMessages.toArray());
+        redisTemplate.expire(key, CACHE_TTL_MESSAGE);
+        redisTemplate.opsForList().trim(key, -MAX_HISTORY_SIZE, -1);
     }
 
     /**
@@ -103,85 +128,85 @@ public class RedisChatMemoryRepositoryDialect {
      * Redis数据结构：删除List + Set中元素
      */
     public void deleteByConversationId(String conversationId) {
-        String key = CACHE_MESSAGE_LIST_PREFIX + conversationId;
+
+        // 1. 删除指定会话的所有消息
+        String key = getMessageKey(conversationId);
         redisTemplate.delete(key);
+
+        // 2. 删除会话ID集合中的对应ID
         redisTemplate.opsForSet().remove(CACHE_CONVERSATION_KEY, conversationId);
     }
 
     /**
-     * 在saveAll操作时统一添加系统时间
-     * @param jsonNode 待转换的 JsonNode
-     * @param messageType 消息类型
-     * @param textContent 消息内容
-     * @return Message 实例
+     * 生成消息列表的Redis键
      */
-    private Message getMessageWithTime(JsonNode jsonNode,MessageType messageType,String textContent){
-        // 从 jsonNode 中获取 metadata 字段并转换为 Map<String, Object>
-        Map<String, Object> metadata = Optional.ofNullable(jsonNode)
-                .map(node -> node.get("metadata"))
-                .map(node -> objectMapper.convertValue(
-                        node, new TypeReference<Map<String, Object>>() {}))
-                .orElse(new HashMap<>());
-        if(!metadata.containsKey("timestamp")){
-            metadata.put("timestamp", Instant.now().toString());
-        }
-        // 根据不同的消息类型，构造对应的 Message 子类实例并返回
-        return switch (messageType) {
-            case ASSISTANT -> new AssistantMessage(textContent, metadata);          // 助手消息
-            case USER -> UserMessage.builder().text(textContent).metadata(metadata).build();   // 用户消息
-            case SYSTEM -> SystemMessage.builder().text(textContent).metadata(metadata).build(); // 系统消息
-            case TOOL -> new ToolResponseMessage(List.of(), metadata);                // 工具调用消息
-        };
+    private String getMessageKey(String conversationId) {
+        return CACHE_MESSAGE_LIST_PREFIX + conversationId;
     }
 
     /**
-     * 将一个 JsonNode 转换成对应的 Message 子类实例。
-     * 根据 messageType 字段决定返回哪种 Message 类型，并提取 text 和 metadata 字段。
-     * 额外会在 metadata 中添加当前时间戳。
-     *
-     * @param jsonNode 传入的 JSON 树节点，包含 messageType、text、metadata 等字段
-     * @return 对应类型的 Message 对象实例（AssistantMessage、UserMessage、SystemMessage 或 ToolResponseMessage）
+     * 给消息添加时间戳元数据
      */
-    private Message getMessage(JsonNode jsonNode) {
-        // 从 jsonNode 中获取 messageType 字段的文本内容，默认为 USER 类型
-        String type = Optional.ofNullable(jsonNode)
-                .map(node -> node.get("messageType"))  // 取 messageType 字段节点
-                .map(JsonNode::asText)                 // 转为字符串
-                .orElse(MessageType.USER.getValue()); // 如果没有该字段，默认是 USER 类型
+    private Message addTimestampToMessage(Message message) {
+        try {
+            String json = objectMapper.writeValueAsString(message);
+            JsonNode jsonNode = objectMapper.readTree(json);
 
-        // 根据字符串转换为枚举类型 MessageType
-        MessageType messageType = MessageType.valueOf(type.toUpperCase());
+            Map<String, Object> metadata = Optional.ofNullable(jsonNode.get("metadata"))
+                    .map(node -> objectMapper.convertValue(node, new TypeReference<Map<String, Object>>() {}))
+                    .orElse(new HashMap<>());
 
-        // 从 jsonNode 中获取 text 字段的内容
-        String textContent = Optional.ofNullable(jsonNode)
-                .map(node -> node.get("text"))    // 取 text 字段节点
-                .map(JsonNode::asText)            // 转为字符串
-                // 如果 text 字段不存在，根据消息类型返回默认值：
-                // SYSTEM 和 USER 类型默认返回空字符串 ""，其他类型返回 null
-                .orElseGet(() ->
-                        (messageType == MessageType.SYSTEM || messageType == MessageType.USER)
-                                ? ""
-                                : null);
+            // 只在没有时间戳时添加
+            metadata.putIfAbsent("timestamp", Instant.now().toString());
 
-        // 从 jsonNode 中获取 metadata 字段并转换为 Map<String, Object>
-        Map<String, Object> metadata = Optional.ofNullable(jsonNode)
-                .map(node -> node.get("metadata"))       // 取 metadata 节点
-                .map(node -> objectMapper.convertValue( // 用 Jackson ObjectMapper 转换成 Map
-                        node, new TypeReference<Map<String, Object>>() {}))
-                .orElse(new HashMap<>());                 // 如果没有 metadata 字段，返回空 Map
-
-        // 在 metadata 中加入当前时间戳，key 是 "timestamp"，值是当前 ISO 格式时间字符串
-        if(!metadata.containsKey("timestamp")){
-            metadata.put("timestamp", Instant.now().toString());
+            // 根据消息类型构建带时间戳的消息
+            return switch (message.getMessageType()) {
+                case ASSISTANT -> new AssistantMessage(message.getText(), metadata);
+                case USER -> UserMessage.builder().text(message.getText()).metadata(metadata).build();
+                case SYSTEM -> SystemMessage.builder().text(message.getText()).metadata(metadata).build();
+                case TOOL -> new ToolResponseMessage(List.of(), metadata);
+            };
+        } catch (JsonProcessingException e) {
+            log.error("处理消息时发生序列化错误，消息内容: {}", message, e);
+            return null;
         }
+    }
 
-        // 根据不同的消息类型，构造对应的 Message 子类实例并返回
-        return switch (messageType) {
-            case ASSISTANT -> new AssistantMessage(textContent, metadata);          // 助手消息
-            case USER -> UserMessage.builder().text(textContent).metadata(metadata).build();   // 用户消息
-            case SYSTEM -> SystemMessage.builder().text(textContent).metadata(metadata).build(); // 系统消息
-            case TOOL -> new ToolResponseMessage(List.of(), metadata);                // 工具调用消息
-        };
+    /**
+     * 将Redis中的对象转换为Message实例
+     */
+    private Message convertToMessage(Object object) {
+        try {
+            String json = objectMapper.writeValueAsString(object);
+            JsonNode jsonNode = objectMapper.readTree(json);
+
+            String type = Optional.ofNullable(jsonNode.get("messageType"))
+                    .map(JsonNode::asText)
+                    .orElse(MessageType.USER.getValue());
+
+            MessageType messageType = MessageType.valueOf(type.toUpperCase());
+            String textContent = Optional.ofNullable(jsonNode.get("text"))
+                    .map(JsonNode::asText)
+                    .orElseGet(() ->
+                            (messageType == MessageType.SYSTEM || messageType == MessageType.USER) ? "" : null
+                    );
+
+            Map<String, Object> metadata = Optional.ofNullable(jsonNode.get("metadata"))
+                    .map(node -> objectMapper.convertValue(node, new TypeReference<Map<String, Object>>() {}))
+                    .orElse(new HashMap<>());
+
+            metadata.putIfAbsent("timestamp", Instant.now().toString());
+
+            return switch (messageType) {
+                case ASSISTANT -> new AssistantMessage(Objects.requireNonNullElse(textContent, ""), metadata);
+                case USER -> UserMessage.builder().text(textContent).metadata(metadata).build();
+                case SYSTEM -> SystemMessage.builder().text(textContent).metadata(metadata).build();
+                case TOOL -> new ToolResponseMessage(List.of(), metadata);
+            };
+        } catch (Exception e) { // 捕获所有异常，避免单个消息处理失败影响整体
+            log.error("反序列化消息失败，对象: {}", object, e);
+            return null;
+        }
     }
 }
 
